--- a/index.html
+++ b/index.html
@@ -1675,8 +1675,8 @@
                 <div class="row row--25 plr_sm--10">
 
 
-                    <!-- Start Single Portfolio -->
-                    <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
+                    
+                    <!-- <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
                         class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
                         <div class="rn-portfolio" data-toggle="modal" data-target="#project-zeroing">
                             <div class="inner">
@@ -1694,6 +1694,33 @@
 
                                     </div>
                                     <h4 class="title"><a href="javascript:void(0)">Weapon
+                                            Zeroing and Warriors’ Range
+                                            Analysis System of Small Arms for Bangladesh
+                                            Army <i class="feather-arrow-up-right"></i></a>
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
+
+                    <div onclick="location.href='./projects/zeroing.html'" data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
+                        class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
+                        <div class="rn-portfolio" >
+                            <div class="inner">
+                                <div class="thumbnail">
+                                    <a href="./projects/zeroing.html">
+                                        <img src="assets/images/projects/zeroing/hw2.jpg"
+                                            alt="Personal Portfolio Images">
+                                    </a>
+                                </div>
+                                <div class="content">
+                                    <div class="category-info">
+                                        <div class="category-list">
+                                            <a href="javascript:void(0)">Machine Learning</a>
+                                        </div>
+
+                                    </div>
+                                    <h4 class="title"><a href="./projects/zeroing.html">Weapon
                                             Zeroing and Warriors’ Range
                                             Analysis System of Small Arms for Bangladesh
                                             Army <i class="feather-arrow-up-right"></i></a>
@@ -2453,7 +2480,7 @@
         </div>
         <!-- project nochinta modal end -->
         <!-- project zeroing modal start -->
-        <div class="modal fade" id="project-zeroing" tabindex="-1" role="dialog" aria-hidden="true">
+        <!-- <div class="modal fade" id="project-zeroing" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -2698,11 +2725,7 @@
                                 </div>
 
                             </div>
-
                             <div class="col-md-5">
-
-
-
                                 <img src="assets/images/projects/zeroing/hw2.jpg" alt=""
                                     style="width: 100%; height: auto; border-radius: 5px;">
 
@@ -2713,47 +2736,13 @@
                                     Arduino Mega, etc.
                                 </p>
 
-
-
-
-
-
-
-
                             </div>
-
-
-                            <!-- <div class="col-md-3"></div> -->
-
-                            <!-- <div class="col-md-6 ">
-                                <p>
-
-                                    Built the web application using PHP,
-                                    JavaScript, MySql, HTML and CSS.
-                                    The
-                                    android application was built with Java.
-                                </p>
-                            </div> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                         </div>
-                        <!-- End of .row Body-->
+                  
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- project zeroing modal end -->
         <!-- project driving modal start -->
         <div class="modal fade" id="projectDrivingModal" tabindex="-1" role="dialog" aria-hidden="true">
