--- a/projects/brri.html
+++ b/projects/brri.html
@@ -11,24 +11,24 @@
     <!-- Favicon -->
     <!-- <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico"> -->
 
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick.css">
-    <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
-    <link rel="stylesheet" href="assets/css/vendor/aos.css">
-    <link rel="stylesheet" href="assets/css/plugins/feature.css">
+    <link rel="stylesheet" href="../assets/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/vendor/slick.css">
+    <link rel="stylesheet" href="../assets/css/vendor/slick-theme.css">
+    <link rel="stylesheet" href="../assets/css/vendor/aos.css">
+    <link rel="stylesheet" href="../assets/css/plugins/feature.css">
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/custom.css">
 
 
     <!-- custom cursor--start -->
     <style>
         html {
-            cursor: url(./assets/images/icons/cursor.png), auto;
+            cursor: url(../assets/images/icons/cursor.png), auto;
         }
 
         a {
-            cursor: url(./assets/images/icons/hand-pointer.png), auto;
+            cursor: url(../assets/images/icons/hand-pointer.png), auto;
         }
     </style>
     <!-- custom cursor--end -->
@@ -46,8 +46,8 @@
             <div class="col-lg-2 col-6">
                 <div class="header-left">
                     <div class="logo">
-                        <a href="index.html">
-                            <img src="assets/images/logo/logo.png" alt="logo">
+                        <a href="../index.html">
+                            <img src="../assets/images/logo/logo.png" alt="logo">
                         </a>
                     </div>
                 </div>
@@ -59,20 +59,20 @@
                     <nav id="sideNav" class="mainmenu-nav navbar-example2 d-none d-xl-block">
                         <!-- Start Mainmanu Nav -->
                         <ul class="primary-menu nav nav-pills">
-                            <li class="nav-item"><a class="nav-link smoth-animation active" href="#home">Home</a></li>
-                            <li class="nav-item"><a class="nav-link smoth-animation" href="#experiences">Experiences</a>
+                            <li class="nav-item"><a class="nav-link smoth-animation active"  href="#" onclick="location.href='../index.html#home'" >Home</a></li>
+                            <li class="nav-item"><a class="nav-link smoth-animation"  href="#" onclick="location.href='../index.html#experiences'" >Experiences</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link smoth-animation" href="#educations">Education</a>
+                            <li class="nav-item"><a class="nav-link smoth-animation"  href="#" onclick="location.href='../index.html#educations'" >Education</a>
                             </li>
-                            <li class="nav-item"><a class="nav-link smoth-animation" href="#skills">Skills</a></li>
-                            <li class="nav-item"><a class="nav-link smoth-animation" href="#projects">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link smoth-animation" href="#contacts">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link smoth-animation"  href="#" onclick="location.href='../index.html#skills'" >Skills</a></li>
+                            <li class="nav-item"><a class="nav-link smoth-animation" href="#" onclick="location.href='../index.html#projects'" >Projects</a></li>
+                            <li class="nav-item"><a class="nav-link smoth-animation" href="#" onclick="location.href='../index.html#contacts'" >Contact</a></li>
                         </ul>
                         <!-- End Mainmanu Nav -->
                     </nav>
                     <!-- Start Header Right  -->
                     <div class="header-right">
-                        <a class="rn-btn" target="_blank" href="./assets/cv.pdf"><span>Download CV</span></a>
+                        <a class="rn-btn" target="_blank" href="../assets/cv.pdf"><span>Download CV</span></a>
                         <div class="hamberger-menu d-block d-xl-none">
                             <i id="menuBtn" class="feather-menu humberger-menu"></i>
                         </div>
@@ -96,9 +96,9 @@
         <div class="inner">
             <div class="menu-top">
                 <div class="menu-header">
-                    <a class="logo" href="index.html">
+                    <a class="logo" href="../index.html">
                         <img style="width: 70px; height: 70px; border-radius: 100%;"
-                            src="assets/images/slider/banner-04.jpg" alt="Personal Portfolio">
+                            src="../assets/images/slider/banner-04.jpg" alt="Personal Portfolio">
                     </a>
                     <div class="close-button">
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
@@ -110,32 +110,32 @@
 
 
                 <ul class="primary-menu nav nav-pills">
-                    <li class="nav-item"><a class="nav-link smoth-animation active" href="#home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link smoth-animation" href="#experiences">Experiences</a>
+                    <li class="nav-item"><a class="nav-link smoth-animation" href="#" onclick="location.href='../index.html#home'">Home</a></li>
+                    <li class="nav-item"><a class="nav-link smoth-animation" href="#" onclick="location.href='../index.html#experiences'">Experiences</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link smoth-animation" href="#educations">Education</a>
+                    <li class="nav-item"><a class="nav-link smoth-animation" href="#" onclick="location.href='../index.html#educations'">Education</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link smoth-animation" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link smoth-animation" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link smoth-animation" href="#contacts">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link smoth-animation" href="#" onclick="location.href='../index.html#skills'">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link smoth-animation" href="#" onclick="location.href='../index.html#projects'">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link smoth-animation" href="#" onclick="location.href='../index.html#contacts'">Contact</a></li>
                 </ul>
                 <!-- social sharea area -->
                 <div class="social-share-style-1 mt--40">
                     <span class="title">find with me</span>
                     <ul class="social-share d-flex liststyle">
                         <li><a target="_blank" href="https://www.linkedin.com/in/shahriar-iqbal/"> <img
-                                    src="assets/images/icons/linkedin.gif" alt="Icons Images">
+                                    src="../assets/images/icons/linkedin.gif" alt="Icons Images">
                             </a>
                         </li>
                         <li><a target="_blank" href="https://join.skype.com/invite/xnepYOho9jjo"> <img
-                                    src="assets/images/icons/skype.gif" alt="Icons Images"> </a>
+                                    src="../assets/images/icons/skype.gif" alt="Icons Images"> </a>
                         </li>
                         <li><a target="_blank" href="https://wa.me/+8801635220984"> <img
-                                    src="assets/images/icons/whatsapp.gif" alt="Icons Images">
+                                    src="../assets/images/icons/whatsapp.gif" alt="Icons Images">
                             </a>
                         </li>
                         <li><a target="_blank" href="https://twitter.com/shahriar__iqbal"> <img
-                                    src="assets/images/icons/twitter.gif" alt="Icons Images">
+                                    src="../assets/images/icons/twitter.gif" alt="Icons Images">
                             </a>
                         </li>
 
@@ -175,24 +175,24 @@
                         <div id="carouselZeroingWebControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner ">
                                 <div class="carousel-item inner active">
-                                    <img class="d-block w-100" src="assets/images/projects/brri-ml/1.png"
+                                    <img class="d-block w-100" src="../assets/images/projects/brri-ml/1.png"
                                         alt="First slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/projects/brri-ml/2.png"
+                                    <img class="d-block w-100" src="../assets/images/projects/brri-ml/2.png"
                                         alt="Second slide">
                                 </div>
 
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/projects/brri-ml/3.png"
+                                    <img class="d-block w-100" src="../assets/images/projects/brri-ml/3.png"
                                         alt="Second slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/projects/brri-ml/4.png"
+                                    <img class="d-block w-100" src="../assets/images/projects/brri-ml/4.png"
                                         alt="Second slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/images/projects/brri-ml/5.png"
+                                    <img class="d-block w-100" src="../assets/images/projects/brri-ml/5.png"
                                         alt="Second slide">
                                 </div>
 
@@ -230,31 +230,31 @@
                 <h2>Technologies</h2>
                 <div class="button-group text-left m-0">
                     <a class="rn-btn border-button btn-small project-tech-modal" href="#"> <img
-                            src="./assets/images/skills/python.png">
+                            src="../assets/images/skills/python.png">
                         Python</a>
 
                     <a class="rn-btn border-button btn-small project-tech-modal" href="#"> <img
-                            src="./assets/images/skills/react-native.png">
+                            src="../assets/images/skills/react-native.png">
                         React Native
                     </a>
                     <a class="rn-btn border-button btn-small project-tech-modal" href="#"> <img
-                            src="./assets/images/skills/react.png">
+                            src="../assets/images/skills/react.png">
                         React
                     </a>
                     <a class="rn-btn border-button btn-small project-tech-modal" href="#"> <img
-                            src="./assets/images/skills/redux.png">
+                            src="../assets/images/skills/redux.png">
                         Redux
                     </a>
                     <a class="rn-btn border-button btn-small project-tech-modal" href="#"> <img
-                            src="./assets/images/skills/node.png">
+                            src="../assets/images/skills/node.png">
                         Node.js
                     </a>
                     <a class="rn-btn border-button btn-small project-tech-modal" href="#"> <img
-                            src="./assets/images/skills/node.png">
+                            src="../assets/images/skills/node.png">
                         Express.js
                     </a>
                     <a class="rn-btn border-button btn-small project-tech-modal" href="#"> <img
-                            src="./assets/images/skills/mongodb.png">
+                            src="../assets/images/skills/mongodb.png">
                         MongoDB</a>
                 </div>
             </div>
@@ -306,17 +306,17 @@
 
 
     <!-- JS ============================================ -->
-    <script src="assets/js/vendor/jquery.js"></script>
-    <script src="assets/js/vendor/modernizer.min.js"></script>
-    <script src="assets/js/vendor/feather.min.js"></script>
-    <script src="assets/js/vendor/slick.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.js"></script>
-    <script src="assets/js/vendor/text-type.js"></script>
-    <script src="assets/js/vendor/wow.js"></script>
-    <script src="assets/js/vendor/aos.js"></script>
-    <script src="assets/js/vendor/particles.js"></script>
+    <script src="../assets/js/vendor/jquery.js"></script>
+    <script src="../assets/js/vendor/modernizer.min.js"></script>
+    <script src="../assets/js/vendor/feather.min.js"></script>
+    <script src="../assets/js/vendor/slick.min.js"></script>
+    <script src="../assets/js/vendor/bootstrap.js"></script>
+    <script src="../assets/js/vendor/text-type.js"></script>
+    <script src="../assets/js/vendor/wow.js"></script>
+    <script src="../assets/js/vendor/aos.js"></script>
+    <script src="../assets/js/vendor/particles.js"></script>
     <!-- main JS -->
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
