added uv project page

--- a/index.html
+++ b/index.html
@@ -1732,8 +1732,8 @@
 
 
 
-                    <!-- Start Single Portfolio -->
-                    <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
+               
+                    <!-- <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
                         class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
                         <div class="rn-portfolio" data-toggle="modal" data-target="#project-uv">
                             <div class="inner">
@@ -1750,6 +1750,30 @@
                                         </div>
                                     </div>
                                     <h4 class="title"><a href="javascript:void(0)">University
+                                            Admission
+                                            Help Guide <i class="feather-arrow-up-right"></i></a></h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
+
+                    <div onclick="location.href='./projects/uvadmission.html'" data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
+                        class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
+                        <div class="rn-portfolio">
+                            <div class="inner">
+                                <div class="thumbnail">
+                                    <a href="./projects/uvadmission.html">
+                                        <img src="assets/images/projects/uvadmission/app.jpg"
+                                            alt="Personal Portfolio Images">
+                                    </a>
+                                </div>
+                                <div class="content">
+                                    <div class="category-info">
+                                        <div class="category-list">
+                                            <a href="javascript:void(0)">Application</a>
+                                        </div>
+                                    </div>
+                                    <h4 class="title"><a href="./projects/uvadmission.html">University
                                             Admission
                                             Help Guide <i class="feather-arrow-up-right"></i></a></h4>
                                 </div>
@@ -3094,7 +3118,7 @@
         </div>
         <!-- project applycafe modal end -->
         <!-- project uvadmission modal start -->
-        <div class="modal fade" id="project-uv" tabindex="-1" role="dialog" aria-hidden="true">
+        <!-- <div class="modal fade" id="project-uv" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -3238,7 +3262,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- project uvadmission modal end -->
         <!-- project smart-brain modal start -->
         <div class="modal fade" id="project-smart" tabindex="-1" role="dialog" aria-hidden="true">
