updated research section

--- a/index.html
+++ b/index.html
@@ -1675,7 +1675,7 @@
                 <div class="row row--25 plr_sm--10">
 
 
-                    
+
                     <!-- <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
                         class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
                         <div class="rn-portfolio" data-toggle="modal" data-target="#project-zeroing">
@@ -1703,9 +1703,9 @@
                         </div>
                     </div> -->
 
-                    <div onclick="location.href='./projects/zeroing.html'" data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
-                        class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
-                        <div class="rn-portfolio" >
+                    <div onclick="location.href='./projects/zeroing.html'" data-aos="fade-up" data-aos-delay="100"
+                        data-aos-once="true" class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
+                        <div class="rn-portfolio">
                             <div class="inner">
                                 <div class="thumbnail">
                                     <a href="./projects/zeroing.html">
@@ -1732,7 +1732,7 @@
 
 
 
-               
+
                     <!-- <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
                         class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
                         <div class="rn-portfolio" data-toggle="modal" data-target="#project-uv">
@@ -1757,8 +1757,8 @@
                         </div>
                     </div> -->
 
-                    <div onclick="location.href='./projects/uvadmission.html'" data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
-                        class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
+                    <div onclick="location.href='./projects/uvadmission.html'" data-aos="fade-up" data-aos-delay="100"
+                        data-aos-once="true" class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
                         <div class="rn-portfolio">
                             <div class="inner">
                                 <div class="thumbnail">
@@ -1948,7 +1948,7 @@
         <div id="portfolio-three" class="rn-project-area portfolio-style-two rn-section-gap section-separator">
             <div class="container">
 
-                <div class="row">
+                <div class="row mb-5">
                     <div class="col-lg-12">
                         <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" data-aos-once="true"
                             class="section-title text-center">
@@ -1957,60 +1957,25 @@
                     </div>
                 </div>
 
-                <div data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400" data-aos-once="true"
-                    id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <!-- Start Single Item  -->
-                        <div class="carousel-item active">
-                            <div class="portfolio-single">
-                                <div class="row direction">
-                                    <div class="col-lg-5">
-                                        <div class="inner">
-                                            <h5 class="title">
-                                                Implementation of the AKS Primality Testing Algorithm
-                                            </h5>
-                                            <p class="discription">
-
-                                            </p>
-
-                                            <div class="ft-area">
-                                                <div class="feature-wrapper">
-                                                    <div class="single-feature">
-                                                        <i data-feather="check"></i>
-                                                        <p>Implemented the algorithm where it can successfully test
-                                                            primality & fulfills four properties of AKS algorithm.</p>
-                                                    </div>
-                                                    <div class="single-feature">
-                                                        <i data-feather="check"></i>
-                                                        <p>Worked on improving the implementation and attempted to
-                                                            improve the time complexity of the algorithm.</p>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 col-xl-7">
-                                        <div class="thumbnail">
-                                            <img src="assets/images/projects/thesis.jpg" alt="">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Item  -->
-
-
-
+                <div onclick="location.href='./research/aks.html'" class="row" style="
+                padding: 20px;
+                box-shadow: var(--shadow-1);
+                border-radius: 10px;
+                cursor: url(./assets/images/icons/hand-pointer.png), auto;
+                ">
+                    <div class="d-flex align-items-center mr-3">
+                        <img src="./assets/images/icons/research.png" style="width: 30px;" alt="">
+                    </div>
+                    <div class="">
+                        <p class="" style="color: white; font-size: 19px; margin: 0px;"> Implementation of the AKS
+                            Primality Testing Algorithm</p>
+                        <p style="font-size: 14px;
+                    color: #8F9094">Jan 2019 – Dec 2019</p>
 
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <i data-feather="chevron-left"></i>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <i data-feather="chevron-right"></i>
-                    </a>
                 </div>
+
+
 
             </div>
         </div>
