--- a/index.html
+++ b/index.html
@@ -1967,8 +1967,8 @@
                         <img src="./assets/images/icons/research.png" style="width: 30px;" alt="">
                     </div>
                     <div class="">
-                        <p class="" style="color: white; font-size: 19px; margin: 0px;"> Implementation of the AKS
-                            Primality Testing Algorithm</p>
+                        <p class="" style="color: white; font-size: 19px; margin: 0px;"> <a href="./research/aks.html"> Implementation of the AKS
+                            Primality Testing Algorithm</a></p>
                         <p style="font-size: 14px;
                     color: #8F9094">Jan 2019 – Dec 2019</p>
 
