--- a/projects/zeroing.html
+++ b/projects/zeroing.html
@@ -529,19 +529,15 @@
                     <!-- Start Single Video Button  -->
                     <div class="col-lg-5 col-md-5 col-12">
 
-                        <p>
 
-
-                            The web application is built using HTML, CSS, PHP, Javascript and MySQL has been used to
-                            implement the
-                            database of the system. The user need to log in and complete
-                            their profile using this web application. Besides, the firer can
-                            observe the record of their performance in firing logging in
-                            his account. The sub unit commander will have the control to
-                            observe the overall performance of all the soldiers under
-                            him. The complete web system will be under control of the
-                            admin where he can create, update, delete, lock and unlock
-                            user.
+                        <p class="ml-4 text-justify font-size-17">
+                            The web application is built using basic languages like HTML, CSS, PHP. The user needs
+                            to log in and complete their profile using this web application. Besides, the firer can
+                            observe the record of their performance in firing by logging in his account. The sub-unit
+                            commander has the control to observe the overall performance of all the companies under him.
+                            The complete web system is under control of the admin where he can create, update, delete,
+                            lock and unlock user. Records of all user information are stored in a MySQL database. The
+                            android application uses the same database used for the web application.
                         </p>
 
                     </div>
@@ -564,6 +560,18 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- <div class="rn-video-popup-area rn-section-gapBottom bg_color--1 line-separator">
+            <div class="container">
+                <h2>Technical Sheet</h2>
+
+            </div>
+            <div class="row">
+                <iframe src="//docs.google.com/gview?url=https://www.yourwebsite.com/powerpoint.ppt&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
+
+            </div>
+        </div> -->
 
 
 
