--- a/projects/uvadmission.html
+++ b/projects/uvadmission.html
@@ -183,7 +183,23 @@
                 <div class="row">
 
                     <!-- Start Single Video Button  -->
-                    <div class="col-lg-4 col-md-3"> </div>
+                    <div class="col-lg-8 col-md-6">
+                        <p class="mr-4 text-justify font-size-17">
+                            Using this app students can know current universities ,medical college admission
+                            notice ,available seat ,exam date ,result etc. Student also can directly connect
+                            the universities websites for further information.
+                        </p>
+                        <p class="mr-4 text-justify font-size-17">
+                            The admission information and other process are very discrete in our country that's why students and the admission process very lengthy and inefficient. In this app the
+                            university admission info and seats of different faculties can be found easily.
+                            Vacancy in different departments in different types of universities can help students to apply for their targeted subjects. It can save lots of time which happens during gathering these information.
+                        </p>
+
+                        <p class="text-justify font-size-17 mr-4">
+                            This application provides categories based on different types of higher education such as Engineering, Medical, Dental College, Science, Arts, Commerce, Diploma courses. On each of the categories user can find the universities which offer that type of
+                            courses on the expected degree like BSc, MSc, Diploma, MBBS and other others. User can custom search based on available seats, admission date, application fee and total cost for the entire course and other info. Besides user also  can browse the targeted university websites directly from this app. Further information like students halls, departments, location, campus area can be found easily. User can know about the all faculty and departments the university has and which department under which faculty.
+                        </p>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-12 mt_sm--30">
                         <div id="carouselZeroingWebControls" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner ">
@@ -245,16 +261,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-3"> </div>
 
-                    <!-- End Single Video Button  -->
-                    <div class="col-lg-12">
-                        <p class="text-justify font-size-17 mt-4">
-                            University Admission Help Guide is a android application that manages the admission
-                            procedure of different institution. This app can provide various institutions information
-                            like admission notice , exam details many more notice provided by that institution.
-                        </p>
-                    </div>
+
                 </div>
             </div>
         </div>
