--- a/index.html
+++ b/index.html
@@ -1064,6 +1064,36 @@
                                                 </div>
                                             </div>
 
+                                             <!-- Start Single Portfolio -->
+                                             <div data-aos="fade-up" data-aos-delay="100" data-aos-once="true"
+                                             class="col-lg-6 col-xl-6 col-md-6 col-12 mt--50 mt_md--30 mt_sm--30">
+                                             <div class="rn-portfolio">
+                                                 <div class="inner">
+                                                     <div class="thumbnail">
+                                                         <a href="./projects/brri-ml.html">
+                                                             <img src="assets/images/projects/brri-ml/brri-ml.png"
+                                                                 alt="Personal Portfolio Images">
+                                                         </a>
+                                                     </div>
+                                                     <div class="content">
+                                                         <div class="category-info">
+                                                             <div class="category-list">
+                                                                 <a href="javascript:void(0)">React</a>
+                                                             </div>
+                                                             <!-- <div class="meta">
+                                                                 <span><a target="_blank" href="https://dsa.gov.bd/">
+                                                                         <i class="feather-heart"></i>Live
+                                                                     </a>
+                                                                 </span>
+                                                             </div> -->
+                                                         </div>
+                                                         <h4 class="title"><a href="./projects/brri-ml.html">Rice Plant Disease Management<i
+                                                                     class="feather-arrow-up-right"></i></a></h4>
+                                                     </div>
+                                                 </div>
+                                             </div>
+                                         </div>
+
 
 
 
