updated project & research

--- a/research/zeroing.html
+++ b/research/zeroing.html
@@ -170,8 +170,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <!-- <div class="breadcrumb-inner"> -->
-                        <h1 class="title text-center" style="font-size: 30px;">Implementation of the AKS
-                            Primality Testing Algorithm</h1>
+                        <h1 class="title text-center" style="font-size: 30px;">Weapon Zeroing and Warriors’ Range
+                            Analysis System of Small Arms for Bangladesh Army</h1>
 
                         <!-- </div> -->
                     </div>
@@ -191,10 +191,8 @@
                     <div class="responsive-wrapper 
                        responsive-wrapper-wxh-572x612" style="-webkit-overflow-scrolling: touch; overflow: auto;">
 
-                        <iframe src="https://drive.google.com/file/d/11xTpzG9IpNY5HgxGoeTaKktO3tCoHAqk/preview">
+                        <iframe src="https://drive.google.com/file/d/1tmrCwhgodA0pEI9LWEYNWoHUwCKYzKhM/preview">
                         </iframe>
-                        <!-- src="https://drive.google.com/file/d/1kTa4sQVWyzgTyQrtgkBsu0KsBbjK4Xac/preview">  -->
-
 
                     </div>
                 </div>
